# AliceO2

./: CMakeLists.txt  README.md
CCDB/: CMakeLists.txt
CCDB/include/CCDB/: CcdbApi.h  IdPath.h
CCDB/src/: CcdbApi.cxx  runConditionsClient.cxx  runConditionsServer.cxx
Common/Field/include/Field/: MagneticWrapperChebyshev.h
Common/Field/src/: MagneticWrapperChebyshev.cxx
DataFormats/Headers/include/Headers/: DataHeader.h
Detectors/ITSMFT/ITS/base/: README.md
EventVisualisation/Base/: CMakeLists.txt
EventVisualisation/Base/src/: EventManager.cxx  EventManager.h  GeometryManager.cxx  GeometryManager.h  Initializer.cxx  Initializer.h  MultiView.cxx  MultiView.h  main.cxx
Examples/ExampleModule1/doc/: README.md
Examples/ExampleModule2/doc/: exampleModule2.dox  userGuide.dox
Examples/flp2epn-distributed/: README.md
Framework/Core/include/Framework/: ExternalFairMQDeviceProxy.h
Utilities/DataDistribution/Common/src/: SubTimeFrameVisitors.cxx
Utilities/DataDistribution/ReadoutEmulator/src/: CruEmulator.cxx
Utilities/DataDistribution/test/DplAdapter/: start_StfDplAdapterTest.sh.in  test_StfDplAdapter.cxx
Utilities/DataSampling/src/: DataSamplingReadoutAdapter.cxx
Utilities/QC/: README.md
cmake/: O2Dependencies.cmake
doc/: README.md
doc/doxygen/: CMakeLists.txt  doxyfile.in  main.dox
